--- a/workHours/web/aurelia/src/styles/custom.css
+++ b/workHours/web/aurelia/src/styles/custom.css
@@ -27,6 +27,10 @@ th{
 	cursor:pointer;
 }
 
+.hoverrable:hover{
+  text-decoration: underline;
+}
+
 .no-padding{
 	padding:0px;
 }
@@ -80,4 +84,8 @@ th{
 .truncateCstm {
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.bold{
+  font-weight: bold !important;
 }
