--- a/workHours/web/aurelia/src/styles/custom.css
+++ b/workHours/web/aurelia/src/styles/custom.css
@@ -2,6 +2,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
 }
+@media print
+{
+    .no-print, .no-print *
+    {
+        display: none !important;
+    }
+}
 .w-b{
 	word-break: break-word;
 }
