--- a/workHours/web/src/styles/responsive-table.css
+++ b/workHours/web/src/styles/responsive-table.css
@@ -29,7 +29,7 @@ body {
   font-style: normal;
   font-weight: 300;
   /*font-size: 1.4rem;*/
-  line-height: 2rem;
+  line-height: 1.5rem;
   letter-spacing: 0.01rem;
   color: #212121;
   background-color: #f5f5f5;
@@ -85,7 +85,7 @@ body {
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
   text-align: left;
-  padding: 1.6rem;
+  padding: .7rem;
   vertical-align: top;
   border-top: 0;
   -webkit-transition: all 0.3s ease;
