Add print options to display or not some columns for the work times. Fix 2-3 things in the code and add 24h of connection to the application.

--- a/workHours/web/src/styles/custom.css
+++ b/workHours/web/src/styles/custom.css
@@ -2,11 +2,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
 }
+.only-print, .only-print * {
+		display: none;
+}
 @media print
 {
-    .no-print, .no-print *
-    {
+    .no-print, .no-print * {
         display: none !important;
+    }
+    .only-print, .only-print * {
+      display: inherit !important;
     }
 }
 .w-b{
@@ -14,7 +19,7 @@ body {
 }
 
 table{
-  table-layout: fixed;
+  table-layout: ;
   overflow-x:auto;
 }
 
