Fix issue of reporting that can have NaN value; Fix issue of removing a break or train; Fix issue when navigating without a filter; Resize a bit the texture and add a scroll if there is much text.

--- a/workHours/web/src/styles/custom.css
+++ b/workHours/web/src/styles/custom.css
@@ -18,6 +18,11 @@ body {
 	word-break: break-word;
 }
 
+textarea{
+  overflow-y: scroll !important;
+	max-height: 500px !important;
+	height: 100px !important;
+}
 table{
   table-layout: ;
   overflow-x:auto;
